# EssayJoke

./: README.md  android_keystore.jks  banner.js  build.gradle  config.gradle  gradle.properties  index.android.js  package-lock.json  package.json  settings.gradle
sdk/: CMakeLists.txt  build.gradle  proguard-rules.pro
sdk/src/androidTest/java/com/qiyei/sdk/: ExampleInstrumentedTest.java
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: compress_image.cpp  compress_image.h
sdk/src/main/java/com/qiyei/sdk/base/: BaseActivity.java  SystemBarTintManager.java
sdk/src/main/java/com/qiyei/sdk/crash/: ExceptionCrashHandler.java
sdk/src/main/java/com/qiyei/sdk/db/: DBManager.java  DaoSupport.java  DaoSupportFactory.java  IDaoSupport.java  QuerySupport.java
sdk/src/main/java/com/qiyei/sdk/dialog/: BaseDialog.java  DialogHelper.java  DialogParams.java
sdk/src/main/java/com/qiyei/sdk/fixbug/: FixDexManager.java
sdk/src/main/java/com/qiyei/sdk/http/: HttpManager.java  HttpUtil.java  HttpUtils.java
sdk/src/main/java/com/qiyei/sdk/http/base/: HttpRequest.java  IHttpCallback.java  IHttpEngine.java
sdk/src/main/java/com/qiyei/sdk/http/cache/: HttpCache.java
sdk/src/main/java/com/qiyei/sdk/http/dialog/: LoadingDialog.java
sdk/src/main/java/com/qiyei/sdk/http/okhttp/: OkHttpEngine.java
sdk/src/main/java/com/qiyei/sdk/https/dialog/: LoadingDialog.java
sdk/src/main/java/com/qiyei/sdk/ioc/: CheckNet.java  ViewById.java  ViewFinder.java  ViewUtils.java
sdk/src/main/java/com/qiyei/sdk/log/: LogManager.java  LogUtil.java
sdk/src/main/java/com/qiyei/sdk/titlebar/: AbsTitleBar.java  AbsTitleParams.java  ITitleBar.java
sdk/src/main/java/com/qiyei/sdk/util/: DisplayUtil.java  FileUtil.java  GenericsUtils.java  ImageUtil.java  SystemStatusBarUtil.java
sdk/src/main/java/com/qiyei/sdk/view/: ColorTrackTextView.java  SquareRelativeLayout.java
sdk/src/main/java/com/qiyei/sdk/view/IndicatorView/: IndicatorAdapter.java  IndicatorGroupView.java  IndicatorView.java
sdk/src/main/java/com/qiyei/sdk/view/banner/: BannerAdapter.java  BannerPageAdapter.java  BannerView.java  BannerViewPager.java  DotView.java
sdk/src/main/java/com/qiyei/sdk/view/xrecycler/: CommonRefreshView.java  IViewCreator.java  WrapRecyclerView.java  XStatus.java  (+3 more)
sdk/src/main/res/layout/: fragment_loadingdialog.xml
sdk/src/main/res/values/: attrs.xml  strings.xml  style.xml
sdk/src/test/java/com/qiyei/sdk/: ExampleUnitTest.java
(+1637 files in other folders)
